# fott

./: .gitignore  README.md  config.toml  fott.py  pyproject.toml  requirements.txt
src/fott/: config.toml  fott.py  requirements.txt
