[project]
name = "fott"
version = "0.1.0"
description = "Automation tool for boosting dialog audio"
authors = [
    {name = "Archead"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
