[project]
name = "fott"
version = "0.1.0"
description = "Automation tool for boosting dialog audio"
authors = [
    {name = "Archead"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
homepage = "https://github.com/archead/fott"
repository = "https://github.com/archead/fott"
documentation = "https://github.com/archead/fott/blob/main/README.md"

[project.scripts]
fott = 'fott:main'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
